[project]
name = "lesson-04-static-typing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "clearml>=2.0.2",
    "clearml-session>=0.17.0",
    "pandas>=1.1.5",
    "pydantic>=2.5.3",
    "scikit-learn>=1.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
