[project]
name = "lesson-12-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "clearml[s3]>=2.0.2",
    "pandas==2.3.1",
    "scikit-learn==1.7.1",
    "numpy==2.3.1"
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
